minor style fix for comments on small screens

--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -8,9 +8,11 @@
 
 .posts {
   flex-basis: 60%;
+  max-width: 50%;
 }
 .users {
  flex-direction: column;
+ max-width: 35%;
   bi-user {
     margin: 16px;
   }
