--- a/src/app/posts/posts.component.scss
+++ b/src/app/posts/posts.component.scss
@@ -48,7 +48,7 @@
   .show-comments-toggle {
     display: flex;
     flex-direction: row;
-    flex-basis: 100%;
+    flex-basis: 0;
     justify-content: center;
   }
 }
